<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightLavender"
    tools:context=".ui.activity.LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="417dp"
        android:layout_height="604dp"
        android:src="@drawable/loginbg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="227dp" />

    <EditText
        android:id="@+id/EmailAddressLogin"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="61dp"
        android:ems="10"
        android:hint="E-mail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/PasswordLogin"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="61dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailAddressLogin" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="98dp"
        android:layout_height="39dp"
        android:layout_marginStart="139dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="184dp"
        android:text="Login"
        android:textColor="@color/white"
        app:backgroundTint="@color/darkbrown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgetps" />

    <TextView
        android:id="@+id/forgetps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:text="Forget Password"
        android:textColor="@color/Red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordLogin" />

    <TextView
        android:id="@+id/newaccount"
        android:layout_width="191dp"
        android:layout_height="27dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="60dp"
        android:text="Create new account"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbtn" />


</androidx.constraintlayout.widget.ConstraintLayout>