...
            android:layout_height="70dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="70dp">
                <TextView
                    android:id="@+id/lblStatic"
                    android:layout_width="412dp"
                    android:layout_height="22dp"
                    android:layout_marginBottom="1dp"
                    android:text="Welcome to E-PetShop"
                    android:textAlignment="center"
                    android:textColor="@color/darkbrown"
...
